Show live player knights in chronicle
